--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,15 @@
-<h1 class="title">New Post</h1>
+<section class="hero is-primary">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">
+       Create a New Post
+      </h1>
+      <h2 class="subtitle">
+        Tell the world about each side
+      </h2>
+    </div>
+  </div>
+</section>
 
 <div class="section">
     <%= simple_form_for @post do |f| %>
