--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,15 +1,55 @@
-     <section class="hero is-success is-fullheight">
-        <div class="hero-body">
-          <div class="container">
-            <h1 class="title">
-              <%= link_to "FourSquare", root_path %>
-            </h1>
-            <h2 class="subtitle">
-              There's always more than one view
-            </h2>
+     <section class="hero is-primary is-medium">
+  <!-- Hero head: will stick at the top -->
+  <div class="hero-head">
+    <nav class="navbar">
+      <div class="container">
+        <div class="navbar-brand">
+          <a class="navbar-item">
+            <img src="https://cdn0.iconfinder.com/data/icons/typicons-2/24/th-large-outline-512.png" alt="Logo">
+          </a>
+          <span class="navbar-burger burger" data-target="navbarMenuHeroA">
+            <span></span>
+            <span></span>
+            <span></span>
+          </span>
+        </div>
+        <div id="navbarMenuHeroA" class="navbar-menu">
+          <div class="navbar-end">
+            <a class="navbar-item is-active">
+              Home
+            </a>
+            <a class="navbar-item">
+              Examples
+            </a>
+            <a class="navbar-item">
+              Documentation
+            </a>
+            <span class="navbar-item">
+              <a class="button is-primary is-inverted">
+                <span class="icon">
+                  <i class="fab fa-github"></i>
+                </span>
+                <span>Download</span>
+              </a>
+            </span>
           </div>
         </div>
-      </section>
+      </div>
+    </nav>
+  </div>
+
+  <!-- Hero content: will be in the middle -->
+  <div class="hero-body">
+    <div class="container has-text-centered">
+      <h1 class="title">
+        Foursquare
+      </h1>
+      <h2 class="subtitle">
+        There is always two sides
+      </h2>
+    </div>
+  </div>
+</section>
 
 <section class="section">
     <div class="container">
