--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,10 +12,24 @@
 
 <div class="section">
     <div class="container">
-        <h1 class="title">  
-            <%= @post.title %>
-        </h1>
-        <div class="content">
+        <div class="level">
+            <div class="level-left">
+                <p class="level-item">
+                    <strong>Actions</strong>
+                </p>
+            </div>
+
+            <div class="level-right">
+                <p class="level-item">
+                    <%= link_to "Edit", edit_post_path(@post), class: "button" %>
+                </p>
+                <p class="level-item">
+                    <%= link_to "Delete", root_path, class: "button is-danger" %>
+                </p>
+            </div>
+        </div>
+
+        <div class="container">
             <%= @post.content %>
         </div>
     </div>
