Add edit feature

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,10 +2,9 @@
   <div class="hero-body">
     <div class="container">
       <h1 class="title">
-       Create a New Post
+        <%= @post.title %>
       </h1>
       <h2 class="subtitle">
-        Tell the world about each side
       </h2>
     </div>
   </div>
