--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -29,7 +29,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="content">
             <%= @post.content %>
         </div>
     </div>
