--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -24,7 +24,7 @@
                     <%= link_to "Edit", edit_post_path(@post), class: "button" %>
                 </p>
                 <p class="level-item">
-                    <%= link_to "Delete", root_path, class: "button is-danger" %>
+                    <%= link_to "Delete", post_path(@post), method: :delete, class: "button is-danger" %>
                 </p>
             </div>
         </div>
