--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,7 +10,7 @@
   </div>
 </section>
 
-<div class="section">
+<section class="section">
     <div class="container">
         <div class="level">
             <div class="level-left">
@@ -33,4 +33,16 @@
             <%= @post.content %>
         </div>
     </div>
-</div>
+</section>
+
+<section class="section comments">
+    <div class="container">
+        <h2 class="subtitle is-5"><strong><%= @post.comments.count %></strong> Comments </h2>
+            <%= render @post.comments %>
+            <div class="comment-form">
+                <hr />
+                <div class="subtitle is-3">Create new comment</div>
+                <%= render 'comments/form' %>
+            </div>
+    </div>
+</section>
